<resources>
    <string name="app_name">Space Trader</string>
    <string name="title_activity_config">New Game</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="new_game">New Game</string>
    <string name="loadGameButton">Load Game</string>
    <string name="skill_points_label">Skill Points</string>
    <string name="pilotLabel">Pilot</string>
    <string name="engineer_label">Engineer</string>
    <string name="trader_label">Trader</string>
    <string name="fighter_label">Fighter</string>
    <string name="ship_label">Ship Type:</string>
    <string name="pointCount">16</string>
    <string name="name_hint">Enter name</string>
    <string name="create_button">Create</string>
    <string name="gnat_ship_textview">Gnat</string>
    <string name="password_hint">Enter a password</string>
    <string name="enter_password_hint">Password</string>
    <string name="load_game_button">Load Your Game</string>
    <string name="wallet">Wallet</string>
    <string name="buy">buy</string>
    <string name="buy_textview">Buy</string>
    <string name="sell_textview">Sell</string>
    <string name="fuel_textview">Fuel</string>
    <string name="cargo_capacity_textview">Cargo Capacity</string>
    <string name="current_fuel_textview">Current Fuel</string>
    <string name="current_capacity_textview">Current Capacity</string>
    <string name="see_ship_info_text">See Ship Info</string>
    <string name="travel_textview">Travel to Nearby Planets</string>
    <string name="ship_info_textview">Ship Information</string>
    <string name="travel_button_text">Travel</string>
    <string name="trade_button_text">Trade</string>
    <string name="marketplace_textview">Trade at the Marketplace</string>
    <string name="buy_fuel_textview">Buy Fuel</string>
    <string name="wallet_textview">Wallet</string>
</resources>
