<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/marketplaceTextView"
        android:layout_width="201dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/marketplace_textview"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tradeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tradeButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/trade_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/travelButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:text="@string/travel_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tradeButton"
        app:layout_constraintTop_toBottomOf="@+id/tradeButton" />

    <TextView
        android:id="@+id/shipInfoTextView"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ship_info_textview"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/shipInfoButton"
        app:layout_constraintStart_toStartOf="@+id/TravelTextView"
        app:layout_constraintTop_toBottomOf="@+id/TravelTextView" />

    <Button
        android:id="@+id/shipInfoButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:text="@string/see_ship_info_text"
        app:layout_constraintEnd_toEndOf="@+id/tradeButton"
        app:layout_constraintTop_toBottomOf="@+id/travelButton" />

    <TextView
        android:id="@+id/TravelTextView"
        android:layout_width="201dp"
        android:layout_height="31dp"
        android:layout_marginBottom="5dp"
        android:text="@string/travel_textview"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/travelButton"
        app:layout_constraintStart_toStartOf="@+id/marketplaceTextView" />

</android.support.constraint.ConstraintLayout>