<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.ConfigActivity"
    tools:showIn="@layout/activity_config">

    <Spinner
        android:id="@+id/universeSizeSpinner"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        android:minWidth="200dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gnatLabel"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginTop="30dp"
        android:text="Gnat"
        app:layout_constraintStart_toStartOf="@+id/engineerSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/engineerLabel" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/difficultySpinner"
        app:layout_constraintStart_toStartOf="@+id/difficultySpinner" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Enter name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/difficultySpinner"
        app:layout_constraintStart_toStartOf="@+id/difficultySpinner"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/universeSizeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skillsPointsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/skill_points_label"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/pointCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="16"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/skillsPointsLabel" />

    <TextView
        android:id="@+id/pilotLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="322dp"
        android:layout_marginRight="322dp"
        android:text="@string/pilotLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/skillsPointsLabel"
        app:layout_constraintTop_toBottomOf="@+id/skillsPointsLabel" />

    <TextView
        android:id="@+id/engineerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/engineer_label"
        app:layout_constraintStart_toStartOf="@+id/pilotLabel"
        app:layout_constraintTop_toBottomOf="@+id/traderLabel" />

    <TextView
        android:id="@+id/traderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/trader_label"
        app:layout_constraintStart_toStartOf="@+id/pilotLabel"
        app:layout_constraintTop_toBottomOf="@+id/fighterLabel" />

    <TextView
        android:id="@+id/fighterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fighter_label"
        app:layout_constraintStart_toStartOf="@+id/pilotLabel"
        app:layout_constraintTop_toBottomOf="@+id/pilotLabel" />

    <TextView
        android:id="@+id/shipTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="294dp"
        android:layout_marginRight="294dp"
        android:text="Ship Type:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/skillsPointsLabel"
        app:layout_constraintTop_toBottomOf="@+id/engineerLabel" />

    <SeekBar
        android:id="@+id/pilotSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="233dp"
        android:layout_height="16dp"
        android:layout_marginTop="35dp"
        android:max="16"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/pointCountTextView" />

    <SeekBar
        android:id="@+id/traderSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="233dp"
        android:layout_height="14dp"
        android:layout_marginTop="34dp"
        android:max="16"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/fighterSeekBar" />

    <SeekBar
        android:id="@+id/fighterSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="233dp"
        android:layout_height="14dp"
        android:layout_marginTop="34dp"
        android:max="16"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/pilotSeekBar" />

    <SeekBar
        android:id="@+id/engineerSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="233dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:max="16"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/traderSeekBar" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Create password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

</android.support.constraint.ConstraintLayout>